--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>iPA Groove — Каталог</title>
-  <meta name="description" content="Каталог iOS приложений и взломов">
-  <link rel="icon" href="https://github.com/iPAGroove/iPAGroove/blob/main/IMG_5539.PNG?raw=true">
-</head>
-<body style="font-family: sans-serif; background: #000; color: white; display: flex; align-items: center; justify-content: center; height: 100vh; text-align: center;">
-  <div>
-    <h1 style="font-size: 2em; margin-bottom: 1em;">Добро пожаловать в iPA Groove</h1>
-    <p><a href="/admin.html" style="color: #6e1cff; font-weight: bold; text-decoration: underline;">Перейти в админку</a></p>
-    <p><a href="/catalog.html" style="color: #00bcd4; font-weight: bold; text-decoration: underline;">Перейти в каталог</a></p>
-  </div>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; URL='admin.html'" />
+    <title>Redirecting to Admin Panel...</title>
+  </head>
+  <body style="background:#000; color:white; display:flex; align-items:center; justify-content:center; height:100vh;">
+    <p>🔄 Открываем админку...</p>
+  </body>
 </html>
