--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Авторизация</title>
-  <link rel="stylesheet" href="style.css" />
+  <!-- Стили -->
+  <link rel="stylesheet" href="style.base.css" />
+  <link rel="stylesheet" href="style.auth.css" />
 </head>
 <body>
   <div class="stars"></div>
@@ -27,6 +29,8 @@
       </div>
     </form>
   </div>
-  <script src="script.js"></script>
+  <!-- Скрипты -->
+  <script src="script.base.js"></script>
+  <script src="script.auth.js"></script>
 </body>
 </html>
