--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="icons">
 
             <a href="https://paypal.me/binnichtaktiv" target="_blank">
-                <img src="../images/paypal-whiteBG.svg" alt="PayPal" style="width: 100px; height: 100px;">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/paypal-whiteBG.svg?raw=true" alt="PayPal" style="width: 100px; height: 100px;">
             </a>
             
             <a href="https://ko-fi.com/binnichtaktiv" target="_blank">
