--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 
         <div class="icons">
 
-            <a href="https://paypal.me/binnichtaktiv" target="_blank">
+            <a href="https://paypal.me/ipagroove" target="_blank">
                 <img src="https://github.com/iPAGroove/igroove/blob/main/images/paypal-whiteBG.svg?raw=true" alt="PayPal" style="width: 100px; height: 100px;">
             </a>
             
-            <a href="https://ko-fi.com/binnichtaktiv" target="_blank">
-                <img src="../images/coffee.svg" alt="Buy Me a Coffee" style="width: 70px; height: 70px;">
+            <a href="https://ko-fi.com/ipagroove" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/coffee.svg?raw=true" alt="Buy Me a Coffee" style="width: 70px; height: 70px;">
             </a>
 
             <a href="https://revolut.me/jonas2xn2" target="_blank">
