--- a/index.html
+++ b/index.html
@@ -261,38 +261,28 @@
         <h1>Donate iPAGroove</h1>
         <div class="icon-grid">
             <a href="ВАША_ССЫЛКА_НА_ПРИВАТБАНК" class="icon-link" target="_blank">
-                <img src="images/privatbank_icon.png" alt="ПриватБанк" class="icon-img">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6668.jpeg?raw=true" alt="ПриватБанк" class="icon-img">
                 <span>ПриватБанк</span>
             </a>
 
             <a href="ВАША_ССЫЛКА_НА_МОНОБАНК" class="icon-link" target="_blank">
-                <img src="images/monobank_icon.png" alt="Монобанк" class="icon-img">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6669.jpeg?raw=true" alt="Монобанк" class="icon-img">
                 <span>Монобанк</span>
             </a>
 
             <a href="ВАША_ССЫЛКА_НА_PAYPAL" class="icon-link" target="_blank">
-                <img src="images/paypal_icon.png" alt="PayPal" class="icon-img">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6667.jpeg?raw=true" alt="PayPal" class="icon-img">
                 <span>PayPal</span>
             </a>
 
             <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-link" target="_blank">
-                <img src="images/binance_icon.png" alt="Binance" class="icon-img">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/binance.png?raw=true" alt="Binance" class="icon-img">
                 <span>Binance (USDT)</span>
             </a>
 
-            <a href="https://www.donationalerts.com/r/ВАШ_НИКНЕЙМ" class="icon-link" target="_blank">
-                <img src="images/donationalerts_icon.png" alt="DonationAlerts" class="icon-img">
-                <span>DonationAlerts</span>
-            </a>
-
-            <a href="https://www.patreon.com/ВАШ_НИКНЕЙМ" class="icon-link" target="_blank">
-                <img src="images/patreon_icon.png" alt="Patreon" class="icon-img">
-                <span>Patreon</span>
-            </a>
-
-            <a href="https://boosty.to/ВАШ_НИКНЕЙМ" class="icon-link" target="_blank">
-                <img src="images/boosty_icon.png" alt="Boosty" class="icon-img">
-                <span>Boosty</span>
+            <a href="ВАША_ССЫЛКА_НА_BINANCE" class="icon-link" target="_blank">
+                <img src="https://github.com/iPAGroove/igroove/blob/main/images/IMG_6670.jpeg?raw=true" alt="ABank" class="icon-img">
+                <span>ABank</span>
             </a>
 
             </div>
